[package]
name        = "editdistancewf"
description = "Compute the edit-distance between vectors using the Wagner-Fischer algorithm"
homepage    = "https://github.com/kjgorman/editdistancewf"
repository  = "https://github.com/kjgorman/editdistancewf"
license     = "MIT"
keywords    = ["edit", "distance", "wagner-fischer"]
version     = "0.2.0"
authors     = ["kjgorman <kieran@kjgorman.com>"]

[dev-dependencies]
quickcheck = "*"